# Strategic_Segment_Builder

./: .gitignore  Dataset_Creator.py  Decision_Tree_vs_RapidSegment.ipynb  Decision_Tree_vs_SegmentIQ.ipynb  Experiment.ipynb  Health_Check_Extended1.ipynb  Health_Check_Extended2.ipynb  Health_Check_Kaggle.ipynb  README.md  SSB.ipynb  SSB_V2.ipynb  SSB_V2_Test.ipynb  SSB_V3.ipynb  SSB_V7_Test.ipynb  SSB_V7_Test_2.ipynb  SSB_V7_Test_3.ipynb  code_component_check.py  datamaker_mixed.py  requirements.txt  ssb.py
Datasets/: dataset_creator.py
Experimental_Codes/: SSB_Experimental_V1_Test.ipynb  scorecard_model_test1.json  ssb_experimental.py
Iterartions/: SSB_V1_Test.ipynb  SSB_V2_Test.ipynb  SSB_V3_Test.ipynb  SSB_V4.ipynb  SSB_V4_Test.ipynb  SSB_V4_Test_2.ipynb  SSB_V5_Test.ipynb  SSB_V6_Test.ipynb
Scores/: scorecard_model.json  scorecard_model_test.json  scorecard_model_test1.json
rapidsegment/: README.md  pyproject.toml
rapidsegment/src/rapidsegment/: __init__.py  builder.py  scorer.py
rapidsegment/src/rapidsegment/utils/: data_loader.py  on_gcp_feature_selection.py
segmentiq/: pyproject.toml
utils/: sfs.py  sfs.txt  universal_data_loader.txt
