[project]
name = "rapidsegment"
version = "1.1.7"
description = "A fast, multi-segment population scoring and combinatorial heuristic rule extraction engine."
readme = "README.md"
authors = [
    { name = "Bishwarup Biswas", email = "bishwarup1429@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.5.4",
    "joblib>=1.5.3",
    "numpy>=2.5.1",
    "optbinning>=0.21.0",
    "psutil>=7.2.2",
    "pyarrow>=25.0.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.optional-dependencies]
excel = [
    "openpyxl>=3.1.5",
]
gcp = [
    "google-cloud-bigquery>=3.42.2",
]
prettytable = [
    "prettytable>=3.18.0",
]

[project.urls]
Homepage = "https://github.com/B2BDA/RapidSegment"
Issues = "https://github.com/B2BDA/RapidSegment/issues"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
