[project]
name = "segmentiq"
version = "1.0.0"
description = "A fast, multi-segment population scoring and combinatorial heuristic rule extraction engine."
readme = "README.md"
authors = [
    { name = "Bishwarup Biswas", email = "bishwarup1429@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.4",
    "joblib>=1.5.3",
    "numpy>=2.5.1",
    "optbinning>=0.21.0",
    "psutil>=7.2.2",
    "pyarrow>=25.0.0",
]

[project.optional-dependencies]
excel = [
    "openpyxl>=3.1.5",
]
gcp = [
    "google-cloud-bigquery>=3.42.2"
]
prettytable = [
    "prettytable>=3.18.0",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/B2BDA/Strategic_Segment_Builder"
Issues = "https://github.com/B2BDA/Strategic_Segment_Builder/issues"